--- a/views/index.erb
+++ b/views/index.erb
@@ -1,20 +1,23 @@
+
+
+
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Adele's Web App</title>
+    <title> Save the WALRUS!</title>
   </head>
-  
+
   <body>
-    <h1>Hello from the other side!!</h1>
-    
-    <form method="post" action='/other_side'>
-      How many times did you call?<br>
-      <input type="text" name="times">
-      <input type="submit" value="go to the other side">
+    <h1> The Walrus need our help!</h1>
+
+    <form method="post" action='/donate'>
+      How much would you like to donate? <br>
+      <input type="text" name="dollars">
+      <input type="submit" value="donate">
     </form>
-    
-  </body> 
-  
+
+  </body>
+
 </html>
 
 
@@ -28,10 +31,7 @@
 
 
 
-
-
-
-<!-- 
+<!--
  <form method="post" action="/other_side">
   First name:<br>
   <input type="text" name="firstname" value="John"><br>
