--- a/views/other_side.erb
+++ b/views/other_side.erb
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>the other side</title>
+    <title>Thank you for your donation!</title>
   </head>
-  
+
   <body>
-    <h1>You called <%=params[:times].reverse%> times</h1>
-  </body> 
-  
+    <h1>You donated <%=params[:dollars]%> dollars</h1>
+  </body>
+
 </html>
 
 
